[tool.poetry]
name = "jg.coop"
version = "0.0"
description = "The junior.guru website, Discord bot, and synchronization scripts"
authors = ["Honza Javorek <honza@junior.guru>"]
license = "AGPL-3.0-only AND CC-BY-SA-4.0"
readme = "README.md"
homepage = "https://junior.guru/"
repository = "https://github.com/juniorguru/junior.guru/"
packages = [{ include = "jg" }]

[tool.poetry.scripts]
jg = "jg.coop.cli:main"
coop = "jg.coop.cli:main"

[tool.poetry.dependencies]
python = "~3.12"
"jg.beak" = { git = "https://github.com/juniorguru/beak.git" }
"jg.chick" = { git = "https://github.com/juniorguru/chick.git" }
apify-client = "1.9.2"
apify-shared = "1.4.1"
beautifulsoup4 = "4.13.4"
czech-sort = "1.1.0"
diskcache = "5.6.3"
emoji = "2.14.1"
favicon = "0.7.0"
feedparser = "6.0.11"
fiobank = "4.0.0"
flask = "3.1.1"
fonttools = "4.58.0"
frozen-flask = "1.0.2"
google-api-python-client = "2.170.0"
google-auth = "2.40.2"
gql = {extras = ["requests"], version = "3.5.3"}
gspread = "6.2.1"
httpx = "0.28.1"
ics = {version = "0.8.0.dev0", allow-prereleases = true}
jinja2 = "3.1.6"
lingua-language-detector = "2.0.2"
livereload = "2.7.1"
markdown = "3.8"
markupsafe = "3.0.2"
mkdocs = "1.6.1"
mkdocs-awesome-pages-plugin = "2.10.1"
mkdocs-gen-files = "0.5.0"
openai = "1.82.0"
peewee = "3.18.1"
playwright = "1.52.0"
pod2gen = "1.0.3"
py-cord = {version = "2.6.1", extras = ["speed"]}
pycircleci = "0.7.0"
python-slugify = "8.0.4"
pyyaml = "6.0.2"
requests = "2.32.3"
strictyaml = "1.7.3"
stripe = "12.0.1"
tenacity = "9.1.2"
cssselect = "1.3.0"
pillow = "11.2.1"
pydantic = "2.11.4"
lxml = "5.4.0"
githubkit = "0.12.13"

[tool.poetry.group.dev.dependencies]
ghp-import = "2.1.0"
pync = "2.0.3"
pytest = "8.3.5"
pytest-asyncio = "0.26.0"
pytest-ruff = "0.4.1"
ruff = "0.11.11"
scour = "0.38.2"
sqlite-utils = "3.38"

[tool.pytest.ini_options]
python_files = "test_*.py"
testpaths = "tests"
norecursedirs = "node_modules"
addopts = "--ff --ruff --ruff-format"
filterwarnings = [
    "ignore:'audioop' is deprecated:DeprecationWarning",  # py-cord
]
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
target-version = "py311"
extend-exclude = ["*_legacy"]

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
combine-as-imports = true
lines-after-imports = 2
known-third-party = ["jg.chick", "jg.hen", "jg.beak"]
known-local-folder = ["testing_utils"]

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"
