[project]
name = "jg.coop"
version = "0.0"
description = "The junior.guru website, Discord bot, and synchronization scripts"
readme = "README.md"
authors = [{name = "Honza Javorek", email = "honza@junior.guru"}]
license = "AGPL-3.0-only AND CC-BY-SA-4.0"
requires-python = ">=3.13"
dependencies = [
    "jg.beak@git+https://github.com/juniorguru/beak.git",
    "jg.chick@git+https://github.com/juniorguru/chick.git",
    "apify-client==2.1.0",
    "apify-shared==2.1.0",
    "beautifulsoup4==4.14.2",
    "click==8.3.0",
    "cssselect==1.3.0",
    "czech-sort==1.1.0",
    "diskcache==5.6.3",
    "emoji==2.15.0",
    "favicon==0.7.0",
    "feedparser==6.0.12",
    "fiobank==4.0.0",
    "fonttools==4.60.0",
    "githubkit==0.13.3",
    "google-api-python-client==2.183.0",
    "google-auth==2.40.3",
    "gql[requests]==4.0.0",
    "gspread==6.2.1",
    "httpx==0.28.1",
    "ics==0.8.0.dev0",
    "jinja2==3.1.6",
    "lingua-language-detector==2.1.1",
    "livereload==2.7.1",
    "lxml==6.0.2",
    "markdown==3.9",
    "markupsafe==3.0.3",
    "mkdocs==1.6.1",
    "mkdocs-awesome-nav==3.2.0",
    "mkdocs-gen-files==0.5.0",
    "openai==1.109.1",
    "peewee==3.18.2",
    "pillow==11.3.0",
    "playwright==1.55.0",
    "pod2gen==1.0.3",
    "py-cord[speed]@git+https://github.com/Pycord-Development/pycord.git",
    "pycircleci==0.7.0",
    "python-slugify==8.0.4",
    "pyyaml==6.0.3",
    "requests==2.32.5",
    "strictyaml==1.7.3",
    "stripe==12.5.1",
    "tenacity==9.1.2",
    "tiktoken==0.11.0",
    "pydantic==2.11.10",
]

[project.urls]
homepage = "https://junior.guru/"
repository = "https://github.com/juniorguru/junior.guru"
funding = "https://junior.guru/love/"

[project.scripts]
jg = "jg.coop.cli:main"
coop = "jg.coop.cli:main"

[dependency-groups]
dev = [
    "ghp-import==2.1.0",
    "pync==2.0.3",
    "pytest==8.4.2",
    "pytest-asyncio==1.2.0",
    "pytest-ruff==0.5",
    "ruff==0.13.2",
    "scour==0.38.2",
    "sqlite-utils==3.38",
]

[tool.pytest.ini_options]
python_files = "test_*.py"
testpaths = "tests"
norecursedirs = "node_modules"
addopts = "--ff --ruff --ruff-format"
filterwarnings = [
    "ignore:'audioop' is deprecated:DeprecationWarning",  # py-cord
]
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
target-version = "py311"
extend-exclude = ["*_legacy"]

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
combine-as-imports = true
lines-after-imports = 2
known-third-party = ["jg.chick", "jg.hen", "jg.beak"]
known-local-folder = ["testing_utils"]

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "jg.coop"
